services/servicios/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: servicios
  namespace: servicios
  labels:
    app.kubernetes.io/name: servicios
spec:
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: servicios
  template:
    metadata:
      labels:
        app.kubernetes.io/name: servicios
    spec:
      automountServiceAccountToken: false
      containers:
        - name: homepage
          image: ghcr.io/gethomepage/homepage:v1.13.2
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            capabilities:
              drop:
                - ALL
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000
          ports:
            - name: http
              containerPort: 3000
          livenessProbe:
            httpGet:
              path: /api/healthcheck
              port: http
            initialDelaySeconds: 5
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /api/healthcheck
              port: http
            initialDelaySeconds: 5
            periodSeconds: 15
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              memory: 256Mi
          volumeMounts:
            - mountPath: /app/config/custom.js
              name: config
              subPath: custom.js
            - mountPath: /app/config/custom.css
              name: config
              subPath: custom.css
            - mountPath: /app/config/bookmarks.yaml
              name: config
              subPath: bookmarks.yaml
            - mountPath: /app/config/services.yaml
              name: config
              subPath: services.yaml
            - mountPath: /app/config/settings.yaml
              name: config
              subPath: settings.yaml
            - mountPath: /app/config/widgets.yaml
              name: config
              subPath: widgets.yaml
            - mountPath: /app/config/kubernetes.yaml
              name: config
              subPath: kubernetes.yaml
            - mountPath: /app/config/docker.yaml
              name: config
              subPath: docker.yaml
            - mountPath: /app/config/logs
              name: logs
      volumes:
        - name: config
          configMap:
            name: servicios
        - name: logs
          emptyDir: {}
