services/servicios/service.yml
apiVersion: v1
kind: Service
metadata:
  name: servicios
  namespace: servicios
  labels:
    app.kubernetes.io/name: servicios
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: servicios
