services/servicios/backendtrafficpolicy.yml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: servicios
  namespace: servicios
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: servicios
  healthCheck:
    active:
      type: HTTP
      interval: 10s
      timeout: 2s
      unhealthyThreshold: 3
      healthyThreshold: 1
      http:
        path: /api/healthcheck
        expectedStatuses:
          - 200
  rateLimit:
    type: Local
    local:
      rules:
        - limit:
            requests: 50
            unit: Second
